--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         Estou criando meu primeiro site.  <!--usando <p> para estilização de nosso texto <b> para fazer o negrito na linha-->
     </p>
 </div>
-
+<img src="https://github.com/jonathanluca.png" alt=""> <!--adicionei minha imagem-->
 <br><a href="https://github.com/jonathanluca"><button>Meu usuario github</button></a><br/> <!--o elemento <a seguido do atributo href redireciona para um link-->
 <br><a href="https://www.linkedin.com/in/jonathan-lucas-dos-santos/"><button>Meu linkedin</button></a><br/><!--coloquei meu link do linkedin-->
 
-<img src="" alt=""> <!--adicionei minha imagem-->
+
 
