--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 
 <div>
     <p> 
-        Òla meu nome e <b>jonatnan Lucas</b>, sou estudante do curso de Sistema de Informaçoes da Puc Campinas
-        atualmente me encotro em transiçao de carreira em busca de uma oportunidade.
-        Estou criando meu primeiro site.  <!--usando <p> para estilização de nosso texto <b> para fazer o negrito na linha-->
+        Olá meu nome e <b>Jonathan Lucas</b>,<br> sou estudante do curso de Sistema de Informações sou PUC CAMPINAS.<br> 
+
+Atualmente me encontro em transição de carreira em busca de uma oportunidade de trabalho na área de tecnologia.<br>
+SEJAM BEM VINDOS! <!--usando <p> para estilização de nosso texto <b> para fazer o negrito na linha-->
     </p>
 </div>
-<img src="https://github.com/jonathanluca.png" alt=""> <!--adicionei minha imagem-->
-<br><a href="https://github.com/jonathanluca"><button>Meu usuario github</button></a><br/> <!--o elemento <a seguido do atributo href redireciona para um link-->
-<br><a href="https://www.linkedin.com/in/jonathan-lucas-dos-santos/"><button>Meu linkedin</button></a><br/><!--coloquei meu link do linkedin-->
+<!--<img src="https://github.com/jonathanluca.png" alt="">--> <!--adicionei minha imagem-->
+
+<br><p>CONHEÇA MEUS PROJETOS!</p><a href="https://github.com/jonathanluca"><button>Meu usuario github</button></a><br/> <!--o elemento <a seguido do atributo href redireciona para um link-->
+<br><p>CONHEÇA MEU PERFIL!</p><a href="https://www.linkedin.com/in/jonathan-lucas-dos-santos/"><button>Meu linkedin</button></a><br/><!--coloquei meu link do linkedin-->
 
 
 
