centralização das linhas

--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <title>Meu Primeiro Site</title>
 
 <br>
-<button><div>Bem Vindo no Meu primeiro site</div></button>
+<center>
+    <button><div>Bem Vindo no Meu primeiro site</div></button>
+</center> <!--unsando a tag <center> para centralizar meu texto-->
 <br/>
 
 <div>
     <p> 
-        Olá meu nome e <b>Jonathan Lucas</b>,<br> sou estudante do curso de Sistema de Informações sou PUC CAMPINAS.<br> 
-
-Atualmente me encontro em transição de carreira em busca de uma oportunidade de trabalho na área de tecnologia.<br>
-SEJAM BEM VINDOS! <!--usando <p> para estilização de nosso texto <b> para fazer o negrito na linha-->
-    </p>
+        <center>
+            Olá meu nome e <b>Jonathan Lucas</b>,<br> sou estudante do curso de Sistema de Informações <br>sou PUC CAMPINAS.<br /> 
+            Atualmente me encontro em transição de carreira em busca de uma oportunidade de trabalho na área de tecnologia.<br>
+SEJAM BEM VINDOS!    <!--usando <p> para estilização de nosso texto <b> para fazer o negrito na linha-->
+        </center>    <!--usando <br> para pular de linhas-->
+        </p>
 </div>
-<!--<img src="https://github.com/jonathanluca.png" alt="">--> <!--adicionei minha imagem-->
 
+<!--<img src="https:Estudos_HTML/imagens/imagem.jpg" alt="para esrilizar meu site">    <!--adicionei minha imagem-->
+<center>
 <br><p>CONHEÇA MEUS PROJETOS!</p><a href="https://github.com/jonathanluca"><button>Meu usuario github</button></a><br/> <!--o elemento <a seguido do atributo href redireciona para um link-->
 <br><p>CONHEÇA MEU PERFIL!</p><a href="https://www.linkedin.com/in/jonathan-lucas-dos-santos/"><button>Meu linkedin</button></a><br/><!--coloquei meu link do linkedin-->
 
+
+</center>
 
 
